fix: fixes section items overflow x

--- a/src/pages/menu/menu.css
+++ b/src/pages/menu/menu.css
@@ -10,10 +10,11 @@
   position: relative;
   display: flex;
   gap: 12px;
+  overflow-x: auto;
 
   padding-top: 20px;
   padding-bottom: 24px;
-  padding-left: 16px;
+  padding-inline: 16px;
 
   img {
     padding: 4px;
@@ -48,7 +49,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 104px;
+  justify-content: center;
   cursor: pointer;
 
   &:hover {
@@ -58,8 +59,10 @@
   }
 
   span {
+    width: 104px;
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 62px;
     padding-top: 16px;
     padding-bottom: 8px;
@@ -138,10 +141,11 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 18.75px;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 90%;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   color: var(--regular-gray);
 }
 
